fix(css): calculator width and buttons layout on mobile

--- a/src/scss/base/_html.scss
+++ b/src/scss/base/_html.scss
@@ -37,7 +37,6 @@ h3,
 h4,
 h5,
 h6 {
-  margin-top: 1em;
   margin-bottom: 0.5em;
 }
 
